--- a/Proyecto1/.env
+++ b/Proyecto1/.env
@@ -24,8 +24,8 @@ DB_CONNECTION=sqlsrv
 DB_HOST=127.0.0.1
 DB_PORT=1433
 DB_DATABASE=ProyectoInterModular
-DB_USERNAME=sa
-DB_PASSWORD=politecnics
+DB_USERNAME=userProject1
+DB_PASSWORD=projecteInterModular1
 
 SESSION_DRIVER=database #files
 SESSION_LIFETIME=120
