archivo env actualizado

--- a/Proyecto1/.env
+++ b/Proyecto1/.env
@@ -25,9 +25,9 @@ DB_HOST=127.0.0.1
 DB_PORT=1433
 DB_DATABASE=ProyectoInterModular
 DB_USERNAME=sa
-DB_PASSWORD=a
+DB_PASSWORD=politecnics
 
-SESSION_DRIVER=database #files
+SESSION_DRIVER=files
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
