--- a/Proyecto1/.env
+++ b/Proyecto1/.env
@@ -27,7 +27,7 @@ DB_DATABASE=ProyectoInterModular
 DB_USERNAME=sa
 DB_PASSWORD=politecnics
 
-SESSION_DRIVER=files
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
