Se modifica env xq habia una password erronea, Se arregla bug de  tarjeta de proyectos(Se cerraba la tarjeta clicando el fondo de estado. Se borra la view de proyectos a causa de redundancia con el dash. Se añade boto de crear proyectos con popout y enlazado. Se modifica Perfil para poner los datos del usuario en los campos.)

--- a/Proyecto1/.env
+++ b/Proyecto1/.env
@@ -25,7 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=1433
 DB_DATABASE=ProyectoInterModular
 DB_USERNAME=sa
-DB_PASSWORD=a
+DB_PASSWORD=politecnics
 
 SESSION_DRIVER=database #files
 SESSION_LIFETIME=120
